<resources>
    <string name="appName">Rich cabman</string>
    <string name="mainMenu">Main menu</string>
    <string name="openLastShift">Open last shift</string>
    <string name="newShift">New shift</string>
    <string name="chat">Cabman\'s chat</string>
    <string name="routeMap">Route map</string>
    <string name="exit">Close app</string>
    <string name="noShiftsMSG">no saved shifts</string>
    <string name="allowedOnlyInPortraitMSG">allowed only in portrait mode</string>
    <string name="exitConfirmation">Close app: Are you sure?</string>

    <string name="shiftsListScreenName">Shifts list</string>
    <string name="shiftNotEmptyMSG">Shift is not empty. Delete?</string>
    <string name="shiftDeletedMSG">shift deleted</string>
    <string name="shiftIsClosedMsg">Reopen it and edit?</string>

    <string name="mainScreenName">Order</string>
    <string name="noOrdersMSG">no saved orders</string>
    <string name="addNewOrder">Add order</string>
    <string name="clearForm">Clear form</string>
    <string name="formClearedMSG">form cleared</string>
    <string name="arrivalDateTime">Arrival</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="price">price</string>
    <string name="note">note</string>
    <string name="noteFormatter">,\nnote: %s</string>
    <string name="ordersList">Orders list</string>
    <string name="wrongPriceErrMsg">price is incorrect</string>
    <string name="wrongNoteErrMsg">Note text not saved</string>
    <string name="orderSaved">Order saved</string>
    <string name="orderNotSaved">Order not saved</string>
    <string name="orderDescriptionFormatter">arrival: %1$02d.%2$02d.%3$02d %4$02d:%5$02d,
        \nprice: %6$d, payType: %7$s,
        \ntaxopark: %8$s,
        \nbilling: %9$s</string>

    <string name="payType">Pay type</string>
    <string name="payTypeCash">cash</string>
    <string name="payTypeCard">card</string>
    <string name="payTypeTip">tip</string>

    <string name="google_maps_key" translatable="false">AIzaSyB1ZznQZMNQ_j1FuD9Qm5EBqMnblllNZP8</string>
    <string name="travelTime">Travel time</string>
    <string name="travelDistance">travel distance</string>
    <string name="closeOrder">Close order</string>
    <string name="openMap">Open map</string>

    <string name="shiftTotalsScreenName">Shift totals</string>
    <string name="shiftStart">Shift start</string>
    <string name="shiftEnd">Shift end</string>
    <string name="revenueOfficial">Revenue official</string>
    <string name="revenueCash">- incl cash</string>
    <string name="revenueCard">- incl card</string>
    <string name="petrol">petrol</string>
    <string name="toTheCashier">Hand to the cashier</string>
    <string name="salaryOfficial">Salary official</string>
    <string name="revenueBonus">Tip</string>
    <string name="carRent">Car rent</string>
    <string name="carRentFormatter">\ncar rent: %d</string>
    <string name="salaryUnofficial">Salary plus tip</string>
    <string name="salaryUnofficialFormatter">sal: %d</string>
    <string name="workHoursSpent">Work hours spent</string>
    <string name="salaryPerHour">Salary per hour</string>
    <string name="continueShift">Continue shift</string>
    <string name="shiftIsOpen">Shift open</string>
    <string name="shiftIsClosed">Shift closed</string>
    <string name="zero" translatable="false">0</string>
    <string name="summInputMsg">Enter summ</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="actualPetrolNotSet">You haven\'t stated actually spent petrol</string>
    <string name="ignore">Ignore</string>
    <string name="goBack">Go back</string>
    <string name="inputError">Input error</string>
    <string name="shiftDescriptionFormatter">shift start: %1$02d.%2$02d.%3$02d %4$02d:%5$02d,
        \nrevenue official: %6$d,
        \nhand to the cashier: %7$s,
        \npetrol: %8$s, %9$s closed</string>

    <string name="settingsScreenName">Settings</string>
    <string name="listsSortOrder">List sort order</string>
    <string name="youngIsOnTop">yong is on top</string>
    <string name="youngIsNotOnTop">old is on top</string>
    <string name="timePickClicks">Confirm time input</string>
    <string name="singleTapTimePick">single tap</string>
    <string name="twoTapTimePick">two tap time pick</string>
    <string name="showTaximeter">Show taximeter</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="not">not</string>
    <string name="chooseNumber">Choose number</string>

    <string name="taxoparksAndBillings">Taxi stations and billings</string>
    <string name="taxoparksAndBillingsInputMSG">Finish input with OK or Enter</string>
    <string name="main">main</string>
    <string name="taxopark">Taxi station</string>
    <string name="taxoparks">Taxi stations</string>
    <string name="taxoparkName">taxi station name</string>
    <string name="billing">Billing</string>
    <string name="billings">Billings </string>
    <string name="billingName">billing name</string>
    <string name="commission">commission</string>
    <string name="isInTheList">is in the list</string>
    <string name="cantBeRemoved">is used in saved orders and cannot be removed</string>

    <string name="userAccountsScreenName">User accounts</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="email">e-mail</string>
    <string name="newDriver">New driver</string>
    <string name="logIn">Log in</string>
    <string name="claimChangeDevice">Change device</string>
    <string name="logOut">Log out</string>
    <string name="dropDBConfirmation">Delete all records from device? This cannot be undone!</string>
    <string name="userRegistered">- user registered</string>
    <string name="emailVerified">- e-mail verified</string>
    <string name="IMEICorrect">- IMEI passed check</string>
    <string name="premiumUser">- premium account active</string>
    <string name="noInternetMSG">check internet connection</string>
    <string name="usernameOrPasswordErrMSG">username or password error</string>
    <string name="irregularErrMSG">irregular error</string>
    <string name="orderDeletedMSG">order deleted</string>
    <string name="orderSelectedMSG">order selected</string>
    <string name="contribute">Say thanks</string>
    <string name="confirmEmail">Confirm e-mail\nand push \"Enter\"</string>
    <string name="emailError">e-mail already taken</string>
    <string name="usernameError">Username already taken</string>
    <string name="emailFormatError">Wrong e-mail format</string>
    <string name="blankFieldsSignUpError">Enter username, password and e-mail please</string>
    <string name="blankFieldsSignInError">Enter username and password please</string>
    <string name="hello">Hello, %s</string>
    <string name="helloAndVerifyEmail">Hello, %s.\nyour email is not verified</string>
    <string name="helloAndGoodDay">Hello, %s. enjoy working!</string>
    <string name="IMEIErrorMSG">You logged in from not regular device.\n
        Now premium options are not available."\n
        To bind this device to your account"\n
        please go to menu \"User accounts\"\n
        and press \"Change device\"</string>
    <string name="IMEIRequestAccepted">Request accepted. Relog please to bind this device to your account</string>
    <string name="IMEIBindedAndGoodDay">You binded this device to your account.\n
        Enjoy working</string>
    <string name="gratefullness1">thank you too for your choice</string>
    <string name="gratefullness2">we are very pleased</string>
    <string name="gratefullness3">really welcome</string>
    <string name="premiumActivated">premium activated</string>
    <string name="youAlreadyHavePremium">you already have premium</string>
    <string name="youAreNotLoggedIn">you are not logged in or email isn\'t verified./n
        Can\'t activate premium</string>
    <string name="enoughFun">enough fun</string>

    <string name="grandTotalsScreenName">Earned</string>
    <string name="rangeStart">First shift</string>
    <string name="rangeEnd">Last shift</string>
    <string name="handedToTheCashier">Handed to the cashier</string>

    <string name="textExampleMain">text example main</string>
    <string name="textExampleAdditional">text example additional</string>

    <string name="defaultTaxoparkName1">Taksi Helsinki</string>
    <string name="defaultTaxoparkName2">The London Taxi</string>


    <string name="chooseShiftOrOrderAction">Choose action</string>
    <string-array name="shiftOrOrderAction">
        <item>Edit</item>
        <item>Show details</item>
        <item>Delete</item>
    </string-array>
</resources>
