<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.FirstScreenFragment"
    android:id="@+id/firstScreenFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <Button
                    android:id="@+id/btnOpenLastShift"
                    android:text="@string/openLastShift"
                    style="@style/ButtonBordered"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <Button
                    android:text="@string/newShift"
                    android:id="@+id/btnNewShift"
                    style="@style/ButtonBordered"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"/>
                <Button
                    android:text="@string/shiftsListScreenName"
                    android:id="@+id/btnOpenShiftsList"
                    style="@style/ButtonBordered"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <Button
                    android:text="@string/settingsScreenName"
                    android:id="@+id/btnSettings"
                    style="@style/ButtonBordered"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"/>
                <Button
                    android:text="@string/userAccountsScreenName"
                    android:id="@+id/btnSignIn"
                    style="@style/ButtonBordered"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <Button
                    android:text="@string/grandTotalsScreenName"
                    android:id="@+id/btnGrandTotals"
                    style="@style/ButtonBordered"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"/>
                <Button
                    android:text="@string/exit"
                    android:id="@+id/btnExit"
                    style="@style/ButtonBordered"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <Button
                    android:text="@string/chat"
                    android:id="@+id/btnChat"
                    style="@style/ButtonBordered"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <Button
                    android:text="@string/routeMap"
                    android:id="@+id/btnRoute"
                    style="@style/ButtonBordered"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </TableRow>

        </TableLayout>
    </ScrollView>
</LinearLayout>
