    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity"
        android:layout_height="match_parent" android:layout_width="384dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_height="wrap_content" android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:text="@string/arrivalDateTime"
                android:layout_height="wrap_content" android:layout_width="wrap_content"/>

            <LinearLayout
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:orientation="horizontal">

                <Button android:text="@string/date"
                    style="@style/ButtonBordered"
                    android:id="@+id/btnDate"
                    android:layout_width="124dp" android:layout_height="80dp"
                    android:layout_gravity="center_vertical"/>
                <LinearLayout android:id="@+id/datePickerPlaceHolder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                </LinearLayout>


                <Button android:text="@string/time"
                    style="@style/ButtonBordered"
                    android:id="@+id/btnTime"
                    android:layout_width="124dp" android:layout_height="80dp"
                    android:layout_gravity="center_vertical"/>

                <LinearLayout android:id="@+id/timePickerPlaceHolder"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:orientation="horizontal"></LinearLayout>

                <EditText android:text="@string/time"
                    style="@style/Text"
                    android:id="@+id/timeInput"
                    android:layout_width="124dp" android:layout_height="80dp"
                    android:layout_gravity="center_vertical"
                    android:inputType="time"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_height="wrap_content" android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp">

            <TextView android:text="@string/payType"
                style="@style/Text"
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal" />

            <RadioGroup
                android:id="@+id/payTypeRadioGroup"
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:orientation="horizontal" >
                <RadioButton android:text="@string/payTypeCash"
                    android:id="@+id/choiceCache"
                    android:layout_height="80dp" android:layout_width="124dp"
                    android:checked="true"
                    android:layout_marginLeft="2dp" android:layout_marginRight="2dp" />
                <RadioButton android:text="@string/payTypeCard"
                    android:id="@+id/choiceCard"
                    android:layout_height="80dp" android:layout_width="124dp"
                    android:layout_marginLeft="2dp" android:layout_marginRight="2dp" />
                <RadioButton android:text="@string/payTypeTip"
                    android:id="@+id/choiceBonus"
                    android:layout_height="80dp" android:layout_width="124dp"
                    android:layout_marginLeft="2dp" android:layout_marginRight="2dp" />
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_height="wrap_content" android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center">
            <EditText android:id="@+id/price"
                style="@style/Text"
                android:hint="@string/costInputHint"
                android:layout_height="80dp" android:layout_width="124dp"
                android:inputType="numberDecimal"
                android:gravity="center" />
            <Button android:text="@string/addNewOrder"
                style="@style/ButtonBordered"
                android:id="@+id/buttonAddNew"
                android:layout_height="80dp" android:layout_width="124dp" />
            <Button android:text="@string/clearForm"
                style="@style/ButtonBordered"
                android:id="@+id/buttonClearForm"
                android:layout_height="80dp" android:layout_width="124dp" />
        </LinearLayout>
    </LinearLayout>

