<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    tools:context=".OrderActivity"
    android:id="@+id/activity_order"
    android:layout_gravity="center">
    <TableRow
        android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView
            android:text="@string/travelTime"
            android:layout_width="0dp" android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center_vertical"/>
        <TextView
            android:text="0:00:00"
            android:id="@+id/travelTimeTextView"
            android:layout_width="0dp" android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center_vertical"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView
            android:text="@string/travelDistance"
            android:layout_width="0dp" android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center_vertical"/>
        <TextView
            android:text="---"
            android:id="@+id/distanceTextView"
            android:layout_width="0dp" android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center_vertical"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button
            android:text="@string/closeOrder"
            android:id="@+id/buttonCloseOrder"
            android:layout_width="0dp" android:layout_height="80dp"
            android:layout_weight="1"/>
        <Button
            android:text="@string/openMap"
            android:id="@+id/buttonOpenMap"
            android:layout_width="0dp" android:layout_height="80dp"
            android:layout_weight="1"/>
    </TableRow>
</TableLayout>