<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tt.richTaxist.OrderFragment"
    android:id="@+id/orderFragment">

    <ScrollView
        android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginBottom="2dp" android:layout_marginTop="2dp">
                <TextView
                    android:text="@string/arrivalDateTime"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    />

                <LinearLayout
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:text="@string/date"
                        style="@style/ButtonBordered"
                        android:id="@+id/btnDate"
                        android:layout_width="0dp" android:layout_height="60dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"/>
                    <LinearLayout
                        android:id="@+id/datePickerPlaceHolder"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:orientation="horizontal" >
                    </LinearLayout>


                    <Button
                        android:text="@string/time"
                        style="@style/ButtonBordered"
                        android:id="@+id/btnTime"
                        android:layout_width="0dp" android:layout_height="60dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"/>

                    <LinearLayout
                        android:id="@+id/timePickerPlaceHolder"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginTop="2dp" android:layout_marginBottom="2dp">

                <TextView
                    android:text="@string/payType"
                    style="@style/Text"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

                <RadioGroup
                    android:id="@+id/payTypeRadioGroup"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <RadioButton
                        android:text="@string/payTypeCash"
                        android:id="@+id/choiceCash"
                        android:layout_width="0dp" android:layout_height="60dp"
                        android:checked="true"
                        android:layout_marginLeft="2dp" android:layout_marginRight="2dp"
                        android:layout_weight="1"/>
                    <RadioButton
                        android:text="@string/payTypeCard"
                        android:id="@+id/choiceCard"
                        android:layout_width="0dp" android:layout_height="60dp"
                        android:layout_marginLeft="2dp" android:layout_marginRight="2dp"
                        android:layout_weight="1"/>
                    <RadioButton
                        android:text="@string/payTypeTip"
                        android:id="@+id/choiceBonus"
                        android:layout_width="0dp" android:layout_height="60dp"
                        android:layout_marginLeft="2dp" android:layout_marginRight="2dp"
                        android:layout_weight="1"/>
                </RadioGroup>
            </LinearLayout>


            <TableRow
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="2dp" android:layout_marginBottom="2dp">
                <EditText
                    android:id="@+id/etPrice"
                    style="@style/Text"
                    android:hint="@string/costInputHint"
                    android:layout_width="0dp" android:layout_height="60dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:inputType="number"/>

                <requestFocus
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <Button
                    android:text="@string/addNewOrder"
                    style="@style/ButtonBordered"
                    android:id="@+id/btnAddNewOrder"
                    android:layout_width="0dp" android:layout_height="60dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>
                <Button
                    android:text="@string/clearForm"
                    style="@style/ButtonBordered"
                    android:id="@+id/btnClearForm"
                    android:layout_width="0dp" android:layout_height="60dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>
            </TableRow>

            <EditText
                android:id="@+id/etNote"
                android:hint="@string/noteInputHint"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="2dp" android:layout_marginBottom="20dp"
                android:inputType="textMultiLine"
                android:minHeight="60dp"/>

            <TableRow
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="2dp" android:layout_marginBottom="2dp">
                <Button
                    android:text="@string/taxopark"
                    android:id="@+id/btnTaxopark"
                    style="@style/ButtonBordered"
                    android:layout_width="0dp" android:layout_height="30dp"
                    android:layout_weight="1"/>
                <Button
                    android:text="@string/billing"
                    android:id="@+id/btnBilling"
                    style="@style/ButtonBordered"
                    android:layout_width="0dp" android:layout_height="30dp"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="2dp" android:layout_marginBottom="2dp">
                <Spinner
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/spnTaxopark"
                    android:spinnerMode="dialog"/>
                <Spinner
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/spnBilling"
                    android:spinnerMode="dialog"/>
            </TableRow>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
